feat: kmeans clustering and stubs for all the rest of clustering and solvers